Enhance website design with glowing navbar, particle gradient, hero fade-in, and footer pulse effects

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 PAYPAL_CLIENT_ID=AUMWMJ8tst7LtMtNCRLg0Pk94TwDoLPEWPA9DVPXFmXxBwMYQPW_Th49cVSNIgfJMwz-z7NmmyCGJ1qp
 PAYPAL_CLIENT_SECRET=EObQnPqSHis2kB1_Y6bzMfZ1uh_eW_bernQBq6QyHZhT2I9lD0QNUvEAt_yAyPGa9EpkM9OBT93aP-mS
 DJANGO_SECRET_KEY=yxaPBefNXiMmyrepBTRZgd6DOZeUpuLfiFRllPdcf2882NaF9p2p-ZpjgATTBHL1XoA
-DEBUG=False
+DEBUG=True
+DEPLOY_ENV=local
+DB_NAME=gaming_studio_db
+DB_USER=postgres
+DB_PASSWORD=loay998877loay  # Updated with the new password
+DB_HOST=localhost
+DB_PORT=5432
